Fix transparent date picker background in dark mode

--- a/src/styles/_tokens.scss
+++ b/src/styles/_tokens.scss
@@ -6,6 +6,7 @@
   --color-bg-mid: #2d1b4e;
   --color-bg-end: #4a1942;
   --color-surface: rgb(255 255 255 / 4%);
+  --color-surface-raised: #2d1b4e;
   --color-surface-border: rgb(192 132 252 / 10%);
   --color-surface-hover: rgb(255 255 255 / 6%);
   --color-surface-shadow: none;
@@ -31,6 +32,7 @@
   --color-bg-mid: #f3e8ff;
   --color-bg-end: #fdf2f8;
   --color-surface: #fff;
+  --color-surface-raised: #fff;
   --color-surface-border: rgb(192 132 252 / 15%);
   --color-surface-hover: #faf5ff;
   --color-surface-shadow: 0 1px 3px rgb(124 58 237 / 6%);
