--- a/src/styles/datepicker.scss
+++ b/src/styles/datepicker.scss
@@ -7,7 +7,7 @@ $dp__font_size: 100%;
 
 .dp__theme_light,
 .dp__theme_dark {
-  --dp-background-color: var(--color-surface);
+  --dp-background-color: var(--color-surface-raised);
   --dp-text-color: var(--color-text-primary);
   --dp-hover-color: var(--color-surface-hover);
   --dp-hover-text-color: var(--color-text-primary);
